# plumed-pybias

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  _config.yml  gen_docs.sh  index.md
CMake/: FindMPI4Py.cmake  FindNumPy.cmake  FindPLUMED.cmake
docs/: conf.py  index.rst  install.rst  intro.md  intro.rst  rst2md.sh  tutorial.rst
src/: CMakeLists.txt  pybias.cpp  pybias.h  pybias_plumed.cpp  pybias_plumed.h
tests/: CMakeLists.txt  ala2.gro  test_basic.sh  test_bias.sh
tests/basic_KbT/: bias.py
tests/basic_api/: bias.py
tests/basic_arg1_ext0/: bias.py
tests/basic_arg1_ext2/: bias.py  test.sh
tests/basic_arg2_ext0/: bias.py
tests/basic_file/: foo.py
tests/bias_arg1_ext0/: FORCE.ref  bias.py
tests/bias_arg1_ext2/: BIAS.ref  FORCE.ref  test.sh
tests/bias_arg2_ext0/: FORCE.ref  bias.py
tests/mpi_1/: test.sh
tests/mpi_1x1/: bias.py  test.sh
tests/mpi_2x3/: ala2.0.gro  bias.py  test.sh
tests/mpi_3/: bias.py  test.sh
